--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.wso2.extension.siddhi.evalscript</groupId>
+        <groupId>org.wso2.extension.siddhi.gpl.evalscript.r</groupId>
         <artifactId>siddhi-gpl-evalscript-r-parent</artifactId>
         <version>3.1.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -33,7 +33,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.wso2.extension.siddhi.evalscript</groupId>
+            <groupId>org.wso2.extension.siddhi.gpl.evalscript.r</groupId>
             <artifactId>siddhi-gpl-evalscript-r</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -63,7 +63,7 @@
                             </adviceFile>
                             <bundles>
                                 <bundleDef>
-                                    org.wso2.extension.siddhi.evalscript:siddhi-gpl-evalscript-r
+                                    org.wso2.extension.siddhi.gpl.evalscript.r:siddhi-gpl-evalscript-r
                                 </bundleDef>
                             </bundles>
                         </configuration>
