--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <version>1</version>
     </parent>
 
-    <groupId>org.wso2.extension.siddhi.evalscript</groupId>
+    <groupId>org.wso2.extension.siddhi.gpl.evalscript.r</groupId>
     <artifactId>siddhi-gpl-evalscript-r-parent</artifactId>
     <version>3.1.3-SNAPSHOT</version>
     <packaging>pom</packaging>
