--- a/component/pom.xml
+++ b/component/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.wso2.extension.siddhi.gpl.evalscript.r</groupId>
         <artifactId>siddhi-gpl-evalscript-r-parent</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
